# gig-map

./: .gitignore  Dockerfile  README.md  align_genomes.nf  align_pangenome.nf  align_reads.nf  align_test.sh  ani.nf  app.py  bin_genes.nf  bin_metagenomes.nf  build_pangenome.nf  build_trees.nf  collect.nf  contrast_metagenomes.nf  deduplicate.nf  download  download.nf  download_genes.nf  download_genomes.nf  helpers.gvy  import_metagenome.nf  main.nf  map_genes.nf  modules.nf  nextflow.config  pdist.nf  render.nf  requirements.txt  search_sketches.nf  setup.cfg  sketch_genomes.nf  test.sh  test_download.sh  test_end_to_end.sh  test_reads.nf
app/: cartesian_tree.py  figure_builder.py  gig-map  gig-map-cli  gig_map_elements.py  greedy_linkage_sorting.py  helpers.py  nested_linkage_sorting.py  plotly_subplots.py
modules/: aggregate.nf  align_genomes.nf  align_markers.nf  align_reads.nf  ani.nf  bin_genes.nf  bin_metagenomes.nf  build_trees.nf  collect.nf  contrast_metagenomes.nf  deduplicate.nf  download.nf  download_genes.nf  download_genomes.nf  filter_genomes.nf  find_reads.nf  import_geneshot.nf  import_metagenome.nf  processes.nf  render.nf  sketch_genomes.nf  test_reads.nf
output/: output.dnd
templates/: aggregate_distances.py  aggregate_results.sh  align_reads.sh  annotate_centroids.py  bin_genes.py  bin_summary.py  calc_distmat.py  cdhit.sh  centroids_length.py  clean_genomes.sh  collect.py  collect_pdist.py  concat_csv.py  concat_readcounts.py  concatenate_alignments.py  concatenate_annotations.py  corncob.Rscript  famli.sh  famli_logs.py  fetchFTP.py  join.py  (+28 more)
(+71 files in other folders)
